@@ -7,6 +7,7 @@ Revision history for SVGPDF
 	- Adjust all modules and tests.
 	- Move contrib bogen code to SVGPDF::Contrib::Bogen.
 	- Add regression test for PDF::API2 and PDF::Builder.
+	- Add warning that rounded rectangles are not yet supported.
 
 0.050	2023-08-14
 
